--- a/locale/fr_CA/common.xml
+++ b/locale/fr_CA/common.xml
@@ -30,7 +30,7 @@
 	<message key="announcement.noneExist">Aucune annonce n'a été publiée.</message>
 	<message key="announcement.posted">Publié</message>
 	<message key="announcement.viewLink">Encore plus...</message>
-	<message key="announcement.view">Voir annonces</message>
+	<message key="announcement.view">Voir l'annonce</message>
 	<message key="common.copy">Copier</message>
 	<message key="common.preview">Aperçu</message>
 	<message key="common.activate">Activer</message>
@@ -43,7 +43,7 @@
 	<message key="common.alphaList">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</message>
 	<message key="common.alreadyAssigned">Déjà assigné</message>
 	<message key="common.altText">Texte alternatif</message>
-	<message key="common.altTextInstructions">Prière de fournir un texte alternatif pour cette image afin d'assurer l'accessibilité aux utilisateurs de navigateurs textuels ou d'appareils et accessoires fonctionnels.</message>
+	<message key="common.altTextInstructions">Veuillez fournir un texte alternatif pour cette image afin d'assurer l'accessibilité aux utilisateurs de navigateurs textuels ou d'appareils et accessoires fonctionnels.</message>
 	<message key="common.and">et</message>
 	<message key="common.applyAction">Appliquer l'action</message>
 	<message key="common.assign">Assigner</message>
@@ -53,8 +53,8 @@
 	<message key="common.cancel">Annuler</message>
 	<message key="common.cancelled">Annulé</message>
 	<message key="common.captchaField.altText">Image de validation</message>
-	<message key="common.captchaField.badCaptcha">Les caractères que vous avez entrés ne correspondent pas aux caractères dans l'image. Prière de vérifier les caractères et d'essayer de nouveau.</message>
-	<message key="common.captchaField.description">Prière de saisir les lettres telles qu'elles apparaissent dans l'image au-dessus.</message>
+	<message key="common.captchaField.badCaptcha">Les caractères que vous avez entrés ne correspondent pas aux caractères dans l'image. Veuillez vérifier les caractères et d'essayer de nouveau.</message>
+	<message key="common.captchaField.description">Veuillez saisir les lettres telles qu'elles apparaissent dans l'image au-dessus.</message>
 	<message key="common.captchaField">Validation</message>
 	<message key="common.changesSaved">Les changements effectués ont été enregistrés.</message>
 	<message key="common.chooseOne">En choisir un</message>
@@ -68,11 +68,11 @@
 	<message key="common.dateCompleted">Date d'achèvement</message>
 	<message key="common.date">Date</message>
 	<message key="common.dateModified">Date de modification</message>
-	<message key="common.dateRequested">Date de livraison</message>
+	<message key="common.dateRequested">Date d'échéance</message>
 	<message key="common.dateSubmitted">Date de soumission</message>
 	<message key="common.dateUploaded">Date de téléchargement</message>
 	<message key="common.day">Jour</message>
-	<message key="common.default">Par défaut</message>
+	<message key="common.default">Défaut</message>
 	<message key="common.delete">Supprimer</message>
 	<message key="common.deleteSelection">Supprimer la sélection</message>
 	<message key="common.description">Description</message>
@@ -82,7 +82,7 @@
 	<message key="common.download">Télécharger</message>
 	<message key="common.edit">Modifier</message>
 	<message key="common.enabled">Activé</message>
-	<message key="common.error.databaseError">Une erreur de base de données est survenue: {$error}</message>
+	<message key="common.error.databaseError">Une erreur de base de données est survenue : {$error}</message>
 	<message key="common.error.databaseErrorUnknown">Une erreur de connexion à la base de données inconnue est survenue.</message>
 	<message key="common.error.framesRequired"><![CDATA[Cette page nécessite des cadres. <a href="{$url}">Cliquer ici</a> pour la version sans cadre.]]></message>
 	<message key="common.event">Événement</message>
@@ -127,10 +127,10 @@
 	<message key="common.record">Enregistrer</message>
 	<message key="common.related">Connexe</message>
 	<message key="common.remove">Supprimer</message>
-	<message key="common.removeSelection">Enlever la sélection</message>
+	<message key="common.removeSelection">Supprimer la sélection</message>
 	<message key="common.replaced">Remplacé</message>
 	<message key="common.replaceFile">Remplacer le fichier</message>
-	<message key="common.requiredField">* Indique les champs obligatoires</message>
+	<message key="common.requiredField">* Indique un champ obligatoire</message>
 	<message key="common.required">Obligatoire</message>
 	<message key="common.saveAndContinue">Enregistrer et continuer</message>
 	<message key="common.saveAndEmail">Enregistrer et envoyer par courriel</message>
@@ -156,7 +156,7 @@
 	<message key="common.up">Haut</message>
 	<message key="common.url">URL</message>
 	<message key="common.user">Utilisateur</message>
-	<message key="common.view">Voir</message>
+	<message key="common.view">Afficher</message>
 	<message key="common.weeks">semaines</message>
 	<message key="common.width">Largeur</message>
 	<message key="common.year">Année</message>
@@ -166,18 +166,18 @@
 	<message key="debug.memoryUsage">Utilisation de la mémoire :</message>
 	<message key="debug.notes.localeListLoad">Liste de langue "{$localeList}" chargée à partir du XML</message>
 	<message key="debug.notes.localeLoad">Fichier de langue "{$localeFile}" chargé à partir du XML</message>
-	<message key="debug.notes.missingLocaleKey">Clé locale manquante "{$key}".</message>
-	<message key="debug.notes">Notes:</message>
+	<message key="debug.notes.missingLocaleKey">Clé de langue manquante "{$key}".</message>
+	<message key="debug.notes">Notes :</message>
 	<message key="email.addAttachment">Ajouter une pièce jointe</message>
-	<message key="email.addBccRecipient">Ajouter un CCI</message>
-	<message key="email.addCcRecipient">Ajouter un CC</message>
+	<message key="email.addBccRecipient">Ajouter une CCI</message>
+	<message key="email.addCcRecipient">Ajouter une CC</message>
 	<message key="email.addToRecipient">Ajouter un destinataire</message>
 	<message key="email.attachments">Pièces jointes</message>
 	<message key="email.bcc">CCI</message>
-	<message key="email.bccSender">Envoyer un exemplaire de ce courriel à mon adresse ({$address})</message>
+	<message key="email.bccSender">Envoyer une copie de ce courriel à mon adresse ({$address})</message>
 	<message key="email.body">Corps</message>
 	<message key="email.cc">CC</message>
-	<message key="email.compose">Écrire le courriel</message>
+	<message key="email.compose">Envoyer le courriel</message>
 	<message key="email.compose.tooManyRecipients">Le message que vous essayez d'envoyer contient trop de destinataires.</message>
 	<message key="email.compose.tooSoon">Vous n'avez pas laissé suffisamment de temps après l'envoi de votre plus récent message. Veuillez attendre avant d'envoyer un nouveau message.</message>
 	<message key="email.email">Courriel</message>
@@ -193,7 +193,7 @@
 	<message key="email.to">À</message>
 	<message key="form.contains">contient</message>
 	<message key="form.errorsOccurred">Des erreurs se sont produites pendant le traitement du formulaire</message>
-	<message key="form.formLanguage.description">Pour entrer les renseignements ci-dessous dans d'autres langues, sélectionnez d'abord la langue désirée.</message>
+	<message key="form.formLanguage.description">Pour saisir les informations ci-dessous dans d'autres langues, sélectionner d'abord la langue désirée.</message>
 	<message key="form.formLanguage">Langue du formulaire</message>
 	<message key="form.is">est</message>
 	<message key="form.postRequired">Le formulaire n'a pas été soumis correctement.</message>
@@ -204,20 +204,20 @@
 	<message key="form.submit">Soumettre</message>
 	<message key="help.contents">Contenu</message>
 	<message key="help.help">Aide</message>
-	<message key="help.helpIndex">Aide -- Index</message>
-	<message key="help.matchesFound">{$matches}Correspondances trouvées</message>
+	<message key="help.helpIndex">Index de l'aide</message>
+	<message key="help.matchesFound">{$matches} correspondances trouvées</message>
 	<message key="help.noMatchingTopics">Aucun sujet d'aide correspondant trouvé.</message>
 	<message key="help.relatedTopics">Sujets connexes</message>
 	<message key="help.searchFor">Rechercher les sujets d'aide pour</message>
 	<message key="help.searchResultsFor">Résultats pour</message>
 	<message key="help.searchResults">Résultats de la recherche</message>
-	<message key="help.search">Aide -- Recherche</message>
+	<message key="help.search">Aide à la recherche</message>
 	<message key="help.toc">Table des matières</message>
-	<message key="help.upALevel">Niveau suivant</message>
-	<message key="icon.checked.alt">Cocher</message>
+	<message key="help.upALevel">Niveau supérieur</message>
+	<message key="icon.checked.alt">Coché</message>
 	<message key="icon.comment.alt">Commentaire</message>
 	<message key="icon.delete.alt">Supprimer</message>
-	<message key="icon.edit.alt">Éditer</message>
+	<message key="icon.edit.alt">Modifier</message>
 	<message key="icon.folder.alt">Dossier</message>
 	<message key="icon.font_large.alt">Grande</message>
 	<message key="icon.font_medium.alt">Moyenne</message>
@@ -225,8 +225,8 @@
 	<message key="icon.info.alt">Info</message>
 	<message key="icon.letter.alt">Lettre</message>
 	<message key="icon.mail.alt">Poster</message>
-	<message key="icon.unchecked.alt">Décocher</message>
-	<message key="icon.view.alt">Voir</message>
+	<message key="icon.unchecked.alt">Décoché</message>
+	<message key="icon.view.alt">Afficher</message>
 	<message key="locale.primary">Langue par défaut</message>
 	<message key="locale.supported">Langues supportées</message>
 	<message key="navigation.about">À propos</message>
